# amazon_scan

./: pyproject.toml
amazon_scrape/: scrape.ipynb
