[tool.poetry]
name = "amazon-scrape"
version = "0.1.0"
description = ""
authors = ["Parker Hancock <633163+parkerhancock@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pytest-playwright = "^0.4.4"
requestium = "^0.4.0"
webdriver-manager = "^4.0.1"
inflection = "^0.5.1"
multiprocess = "^0.70.16"
pandas = "^2.2.1"
pyarrow = "^15.0.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
